infra/k8s/ingress/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: shoptik
    app.kubernetes.io/component: ingress
spec:
  controller: k8s.io/ingress-nginx
